Add support for creating foreign keys when creating schema.